plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.issuetracker'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        resources {
            srcDirs += ['src/main/java']
            exclude '**/*.java'
        }
    }
}

javafx {
    version = '21.0.4'
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'com.google.code.gson:gson:2.10.1'
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
}

application {
    mainClass = 'ui.javafx.App'
}

tasks.register('runFx', JavaExec) {
    group = 'application'
    description = 'Runs the JavaFX UI.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'ui.javafx.App'
}

tasks.register('runSwing', JavaExec) {
    group = 'application'
    description = 'Runs the Swing UI.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'ui.swing.SwingMain'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs(
            "-Dfile.encoding=UTF-8",
            "-Dstdout.encoding=UTF-8",
            "-Dstderr.encoding=UTF-8",
            "--enable-native-access=ALL-UNNAMED"
    )
}
